--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ numba==0.60.0
 numpy==1.26.4             
 openai-whisper==20231117 
 packaging==24.1
+peft==0.12.0
 pycparser==2.22
 pydantic==2.9.2
 pydantic_core==2.23.4
