--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,26 @@
 annotated-types==0.7.0
-anyio==4.4.0             
-certifi==2024.8.30       
-cffi==1.17.1             
+anyio==4.4.0
+certifi==2024.8.30
+cffi==1.17.1
 charset-normalizer==3.3.2
-click==8.1.7             
-colorama==0.4.6          
-exceptiongroup==1.2.2    
-fastapi==0.114.2         
-filelock==3.16.0         
-fsspec==2024.9.0         
-h11==0.14.0              
-huggingface-hub==0.25.0  
-idna==3.10               
-Jinja2==3.1.4            
-llvmlite==0.43.0         
-MarkupSafe==2.1.5        
-more-itertools==10.5.0   
-mpmath==1.3.0            
-networkx==3.3            
-numba==0.60.0            
-numpy==1.26.4             
-openai-whisper==20231117 
+click==8.1.7
+colorama==0.4.6
+exceptiongroup==1.2.2
+fastapi==0.114.2
+filelock==3.16.0
+fsspec==2024.9.0
+h11==0.14.0
+huggingface-hub==0.25.0
+idna==3.10
+Jinja2==3.1.4
+llvmlite==0.43.0
+MarkupSafe==2.1.5
+more-itertools==10.5.0
+mpmath==1.3.0
+networkx==3.3
+numba==0.60.0
+numpy==1.26.4
+openai-whisper==20231117
 packaging==24.1
 peft==0.12.0
 pycparser==2.22
@@ -46,3 +46,23 @@ typing_extensions==4.12.2
 urllib3==2.2.3
 uvicorn==0.30.6
 websockets==13.0.1
+accelerate==0.34.2
+anaconda==0.0.1.1
+audioread==3.0.1
+boto3==1.35.30
+botocore==1.35.30
+decorator==5.1.1
+docker==7.1.0
+einops==0.8.0
+encodec==0.1.1
+funcy==2.0
+jmespath==1.0.1
+joblib==1.4.2
+lazy_loader==0.4
+librosa==0.10.2.post1
+msgpack==1.1.0
+pillow==10.2.0
+platformdirs==4.3.6
+pooch==1.8.2
+psutil==6.0.0
+python-dateutil==2.9.0.post0
